--- a/socialEyem-web/src/main/webapp/mieyem.xhtml
+++ b/socialEyem-web/src/main/webapp/mieyem.xhtml
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="row topspace">
 
-                    <center><h2 id="titulopagina">MI EYEM</h2></center><br/>
+                    <center><h1 id="titulopagina">MI EYEM</h1></center><br/>
 
                     <div class="col-sm-8 col-sm-offset-2">
                         <h:panelGroup id="cont" layout="block">
@@ -69,7 +69,7 @@
                                     <div class="postfooter">
                                         <h:form>
                                             <h:commandLink action="#{postBean.borrarPost(p)}">
-                                                <h:graphicImage height="23" width="23" value="resources/images/iconoborrar.png"/>
+                                                <h:graphicImage height="23" width="23" value="resources/images/iconoborrar.png" alt="borrar post"/>
                                             </h:commandLink>
                                         </h:form>
                                     </div>  
