--- a/socialEyem-web/src/main/webapp/timeline.xhtml
+++ b/socialEyem-web/src/main/webapp/timeline.xhtml
@@ -33,7 +33,7 @@
                                     <h:inputTextarea rows="1" class="form-control" value="#{postBean.imagen}" />
                                 </div>
                                 <div class="form-group">
-                                    Upload photo:
+                                    Cargar foto:
                                     <h:inputFile id="file" value="#{postBean.uploadedFile}"/>
                                 </div>
                                 <div align="right">  
