--- a/socialEyem-web/src/main/webapp/mieyem.xhtml
+++ b/socialEyem-web/src/main/webapp/mieyem.xhtml
@@ -33,6 +33,10 @@
                                     url multimedia
                                     <h:inputTextarea rows="1" class="form-control" value="#{postBean.imagen}" />
                                 </div>
+                                <div class="form-group">
+                                    Cargar foto:
+                                    <h:inputFile id="file" value="#{postBean.uploadedFile}"/>
+                                </div>
                                 <div align="right">
                                     <h:graphicImage height="30" width="22" value="resources/images/privado.jpg" alt="post privado" /> 
                                     <h:commandButton class="btn-action" type="submit" value="eyem it">
