--- a/socialEyem-web/src/main/webapp/mostrarGrupo.xhtml
+++ b/socialEyem-web/src/main/webapp/mostrarGrupo.xhtml
@@ -70,7 +70,10 @@
                                     url multimedia
                                     <h:inputTextarea rows="1" class="form-control" value="#{grupoBean.imagen}" />
                                 </div>
-
+                                <div class="form-group">
+                                    Cargar foto:
+                                    <h:inputFile id="file" value="#{postBean.uploadedFile}"/>
+                                </div>
                                 <div align="right">  
                                     <h:commandButton class="btn-action" type="submit" value="eyem it">
                                         <f:param name="creandoPost" value="#{grupoBean.grupoSeleccionado.idGrupo}" />
