ID google fuera

--- a/socialEyem-web/src/main/webapp/index.xhtml
+++ b/socialEyem-web/src/main/webapp/index.xhtml
@@ -39,13 +39,13 @@
                 
                 <span id="signinButton">
 
-                    <button class="g-signin"
+<!--                    <button class="g-signin"
                             data-scope="email"
-                            data-clientid="1004446024731-a4bo8mvhguacp0r41gq7gpee44fqmvk1.apps.googleusercontent.com"
+                            data-clientid="<CLIENT ID>"
                             data-callback="onSignInCallback"
                             data-theme="dark"
                             data-cookiepolicy="single_host_origin">
-                    </button>
+                    </button>-->
                 </span>
 
                 <h:form id="poi-form" style="visibility:hidden">
