--- a/socialEyem-web/src/main/webapp/index.xhtml
+++ b/socialEyem-web/src/main/webapp/index.xhtml
@@ -39,13 +39,13 @@
                 
                 <span id="signinButton">
 
-<!--                    <button class="g-signin"
+                    <button class="g-signin"
                             data-scope="email"
-                            data-clientid="<CLIENT ID>"
+                            data-clientid="531567033275-pon4jh5fn8dhmobq8ifhavg7et4t4dif.apps.googleusercontent.com"
                             data-callback="onSignInCallback"
                             data-theme="dark"
                             data-cookiepolicy="single_host_origin">
-                    </button>-->
+                    </button>
                 </span>
 
                 <h:form id="poi-form" style="visibility:hidden">
